--- a/docker-compose-plex-stack.yml
+++ b/docker-compose-plex-stack.yml
@@ -80,36 +80,36 @@ services:
       - 8989:8989
     restart: unless-stopped
   
-  # #Readarr - Used to download books
-  # readarr:
-  #   image: lscr.io/linuxserver/readarr:develop
-  #   container_name: readarr
-  #   environment:
-  #     - PUID=${PUID}
-  #     - PGID=${GUID}
-  #     - TZ=${TZ}
-  #   volumes:
-  #     - ${BASE_PATH}/readarr/config:/config
-  #     - ${MEDIA_SHARE}:/share 
+  #Readarr - Used to download books
+  readarr:
+    image: lscr.io/linuxserver/readarr:develop
+    container_name: readarr
+    environment:
+      - PUID=${PUID}
+      - PGID=${GUID}
+      - TZ=${TZ}
+    volumes:
+      - ${BASE_PATH}/readarr/config:/config
+      - ${MEDIA_SHARE}:/share 
 
-  #   ports:
-  #     - 8787:8787
-  #   restart: unless-stopped
+    ports:
+      - 8787:8787
+    restart: unless-stopped
     
-  # #Lidarr - Used to download music 
-  # lidarr:
-  #   image: lscr.io/linuxserver/lidarr:latest
-  #   container_name: lidarr
-  #   environment:
-  #     - PUID=${PUID}
-  #     - PGID=${GUID}
-  #     - TZ=${TZ}
-  #   volumes:
-  #     - ${BASE_PATH}/lidarr/config:/config
-  #     - ${MEDIA_SHARE}:/share 
-  #   ports:
-  #     - 8686:8686
-  #   restart: unless-stopped
+  #Lidarr - Used to download music 
+  lidarr:
+    image: lscr.io/linuxserver/lidarr:latest
+    container_name: lidarr
+    environment:
+      - PUID=${PUID}
+      - PGID=${GUID}
+      - TZ=${TZ}
+    volumes:
+      - ${BASE_PATH}/lidarr/config:/config
+      - ${MEDIA_SHARE}:/share 
+    ports:
+      - 8686:8686
+    restart: unless-stopped
     
   #Prowlarr - manages your Sonarr, Radarr and download client
   prowlarr:
@@ -127,19 +127,19 @@ services:
       - 9696:9696
     restart: unless-stopped
     
-  # #Autobrr - used to grab torrents using the trackers IRC channel - Increases seeding due to grabbing content before RSS feed
-  # autobrr:
-  #   container_name: autobrr
-  #   image: ghcr.io/autobrr/autobrr:latest
-  #   restart: unless-stopped
-  #   environment:
-  #     - TZ=${TZ}
-  #     - PUID=${PUID}
-  #     - PGID=${GUID}
-  #   volumes:
-  #     - ${BASE_PATH}/autobrr/config:/config
-  #   ports:
-  #     - 7474:7474
+  #Autobrr - used to grab torrents using the trackers IRC channel - Increases seeding due to grabbing content before RSS feed
+  autobrr:
+    container_name: autobrr
+    image: ghcr.io/autobrr/autobrr:latest
+    restart: unless-stopped
+    environment:
+      - TZ=${TZ}
+      - PUID=${PUID}
+      - PGID=${GUID}
+    volumes:
+      - ${BASE_PATH}/autobrr/config:/config
+    ports:
+      - 7474:7474
 
   #Overseer - allows users to request media on their own
   overseerr:
@@ -241,14 +241,14 @@ services:
   #Can be configured so that when a plex member invites an outside user to a discord channel they are auto invited to plex
   #
   #Feel free to remove this container if you want to manually invite everyone yourself
-  membarr:
-    container_name: membarr
-    image: yoruio/membarr:latest
-    restart: unless-stopped
-    environment:
-      - token=${MEMBARR_TOKEN}
-    volumes:
-      - ${BASE_PATH}/membarr/config:/app/app/config
+  # membarr:
+  #   container_name: membarr
+  #   image: yoruio/membarr:latest
+  #   restart: unless-stopped
+  #   environment:
+  #     - token=${MEMBARR_TOKEN}
+  #   volumes:
+  #     - ${BASE_PATH}/membarr/config:/app/app/config
       
   #Bazarr - for subtitles. Try to use SRT format if you can rather than PGS due to performance issues
   bazarr:
@@ -330,37 +330,37 @@ services:
       - 9999:8080
     
   #Unpacker - Used to unzip zipped files
-  unpackerr:
-    image: golift/unpackerr
-    container_name: unpackerr
+  # unpackerr:
+  #   image: golift/unpackerr
+  #   container_name: unpackerr
 
-    volumes:
-      # You need at least this one volume mapped so Unpackerr can find your files to extract.
-      # Make sure this matches your Starr apps; the folder mount (/downloads or /data) should be identical.
-      - ${MEDIA_SHARE}:/share
-      #- ${BASE_PATH}/unpackerr/config:/config
-    restart: always
-    user: 1000:1000 #Needs to run as 1000
-    # What you see below are defaults for this compose. You only need to modify things specific to your environment.
-    # Remove apps and feature configs you do not use or need. 
-    # ie. Remove all lines that begin with UN_CMDHOOK, UN_WEBHOOK, UN_FOLDER, UN_WEBSERVER, and other apps you do not use.
-    environment:
-      - UN_START_DELAY=1m
-      #- UMASK=002
-      - TZ=${TZ}
-      #- UN_DEBUG=true
-      # Sonarr Config
-      - UN_SONARR_0_URL=http://${SERVER_IP}:7878
-      - UN_SONARR_0_API_KEY=${SONARR_KEY}
-      #- UN_SONARR_0_PATHS_0=/share/downloads/tv
-      - UN_SONARR_0_TIMEOUT=10s
-      #- UN_SONARR_0_PATHS_0=/share/downloads/tv
-      # Radarr Config
-      - UN_RADARR_0_URL=http://${SERVER_IP}:8989
-      - UN_RADARR_0_API_KEY=${RADARR_KEY}
-      #- UN_RADARR_0_PATHS_0=/share/downloads/movies
-      - UN_RADARR_0_TIMEOUT=10s
-      #- UN_RADARR_0_PATHS_0=/share/downloads/movies
+  #   volumes:
+  #     # You need at least this one volume mapped so Unpackerr can find your files to extract.
+  #     # Make sure this matches your Starr apps; the folder mount (/downloads or /data) should be identical.
+  #     - ${MEDIA_SHARE}:/share
+  #     #- ${BASE_PATH}/unpackerr/config:/config
+  #   restart: always
+  #   user: 1000:1000 #Needs to run as 1000
+  #   # What you see below are defaults for this compose. You only need to modify things specific to your environment.
+  #   # Remove apps and feature configs you do not use or need. 
+  #   # ie. Remove all lines that begin with UN_CMDHOOK, UN_WEBHOOK, UN_FOLDER, UN_WEBSERVER, and other apps you do not use.
+  #   environment:
+  #     - UN_START_DELAY=1m
+  #     #- UMASK=002
+  #     - TZ=${TZ}
+  #     #- UN_DEBUG=true
+  #     # Sonarr Config
+  #     - UN_SONARR_0_URL=http://${SERVER_IP}:7878
+  #     - UN_SONARR_0_API_KEY=${SONARR_KEY}
+  #     #- UN_SONARR_0_PATHS_0=/share/downloads/tv
+  #     - UN_SONARR_0_TIMEOUT=10s
+  #     #- UN_SONARR_0_PATHS_0=/share/downloads/tv
+  #     # Radarr Config
+  #     - UN_RADARR_0_URL=http://${SERVER_IP}:8989
+  #     - UN_RADARR_0_API_KEY=${RADARR_KEY}
+  #     #- UN_RADARR_0_PATHS_0=/share/downloads/movies
+  #     - UN_RADARR_0_TIMEOUT=10s
+  #     #- UN_RADARR_0_PATHS_0=/share/downloads/movies
 
   # Used to sync Trash Guides config's to radarr and sonarr
   # Only accessible via command line! No GUI
